fix: update page title and adjust button gaps for improved layout and scrollToTarget now sets #hash in url as well.

--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 20px;
+    gap: 16px;
     transform: translateX(-12px);
 }
 
@@ -398,7 +398,7 @@ button {
 
 .nav-link-section {
     display: flex;
-    gap: 92px;
+    gap: clamp(76px, 4.8vw ,92px);
     text-wrap: nowrap;
 }
 
@@ -406,7 +406,6 @@ button {
     font-size: 26px;
     font-weight: 500;
     line-height: 200%;
-    width: 100px;
     text-align: center;
     color: var(--bg-and-main);
     position: relative;
